# DocuMind

./: .env.example  .env_example  .gitignore  DocuMind_Graph_v2_Implementation_Plan.md  RAG_Answers_Issue.md  Readme.md  SSOT.md  TODO.md  _diag_images.py  _diag_images2.py  _diagnose_phase1.py  _validate_fast.py  _validate_pipeline.py  config.py  debug_evidence.py  debug_issue7.py  debug_parser_table.py  debug_search.py  debug_table.py  debug_upload.py  debug_weaviate.py  demo_questions.py  generate_test_pdfs.py  main.py  package-lock.json  profile_query.py  pyproject.toml  reingest_and_test.py  requirements.txt  run_test_runner.py  setup_project.py  start_server.py  test_critical_fixes.py  test_e2e.py  test_e2e_factual.py  test_embeddings.py  test_fact_retrieval.py  test_fusion.py  test_hybrid.py  test_integration_pipeline.py  (+6 more)
data/: bug_report.md  graph_interactive.html
data/cache/: 3M_2015_10K.json  NeuraCalm.json
docs/: INGESTION_PIPELINE_REPORT.md  QUICK_START.md
frontend/: app.py  app.py.obsolete
generation/: demo_question_generator.py  fact_verifier.py  groq_client.py  prompt_builder.py  risk_detector.py
graph/: __init__.py  graph_engine.py  negative_expansion.py
ingestion/: doc_cache.py  fact_extractor.py  mindmap_builder.py  node_builder.py  parser.py  pymupdf_parser.py  vision_processor.py
retrieval/: evidence_fusion.py  fact_scoring.py  hybrid_search.py  query_expansion.py  reranker.py  risk_radar.py
vectorstore/: weaviate_client.py
visualization/: __init__.py  graph_engine.py  graph_snapshot.py  positive_expansion.py
(+20 files in other folders)
