[project]
name = "dell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain==1.3.10",
    "langchain-docling==2.0.0",
    "langchain-huggingface==1.2.2",
    "langchain-text-splitters==1.1.2",
    "langchain-weaviate==0.0.7",
    "python-dotenv==1.2.2",
    "sentence-transformers==5.6.0",
    "weaviate-client==4.22.0",
]
