[project]
name = "dell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=1.0.0",
    "fastapi>=0.100.0",
    "groq>=0.9.0",
    "langchain==1.3.10",
    "langchain-docling==2.0.0",
    "langchain-huggingface==1.2.2",
    "langchain-text-splitters==1.1.2",
    "langchain-weaviate==0.0.7",
    "matplotlib>=3.7.1",
    "networkx>=3.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pyvis>=0.3.2",
    "sentence-transformers==5.6.0",
    "streamlit>=1.24.0",
    "uvicorn>=0.22.0",
    "pymupdf>=1.23.0",
    "weaviate-client>=4.5.0",
]
